--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #37353E;
-    
+   
     color: aliceblue;
     text-shadow: 2px;
-    padding-top: 20px;
+    margin: 0;
+    padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-section{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
+
 h1 {
     font-size: 100px;
     margin: 0;
@@ -27,16 +29,15 @@ a:hover {
     transform: scale(1.05);
     font-weight: bold;
 }
-#topbar{
-    width: 100vw;
+
+#topbar {
+
     height: 20px;
     background-color: #00FF00;
 }
-#container {
-    width: 80%;
-    
+#container{
+    margin: 0 10%;
 }
-
 .divider1 {
     height: 2px;
     width: 100%;
@@ -57,7 +58,7 @@ a:hover {
     display: flex;
     justify-content: center;
     gap: 10px;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
 }
 
 .skillCard {
@@ -69,6 +70,7 @@ a:hover {
     border-radius: 10px;
     background-color: #64676b;
 }
+
 .galleryCard {
     width: fit-content;
     height: 260px;
@@ -78,7 +80,8 @@ a:hover {
     border-radius: 10px;
     background-color: #64676b;
 }
-.galleryImg{
+
+.galleryImg {
     height: 180px;
 }
 
@@ -94,17 +97,20 @@ a:hover {
     justify-content: space-between;
     flex-direction: column;
 }
-#introLogos{
+
+#introLogos {
+    visibility: hidden;
     display: flex;
     justify-content: space-around;
     background-color: rgba(240, 248, 255, 0.527);
     padding: 10px 5px;
     border-radius: 10px;
-    
+
 }
-.imgLogo{
+
+.imgLogo {
     height: 120px;
-    
+
 }
 
 #introDivImgSrc {
@@ -137,6 +143,11 @@ a:hover {
 .navigationBarElement {
 
     height: 50px;
+}
+@media only screen and (min-width: 780px) {
+    #introLogos{
+        visibility: visible;
+    }
 }
 /* 
 @media only screen and (min-width: 650px) {
